// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`AsyncParallelHook > async empty 1`] = `
[
  [
    1,
  ],
  [
    2,
  ],
  [
    3,
  ],
  "end",
  [],
]
`;

exports[`AsyncParallelHook > async empty 2`] = `
[
  [
    1,
  ],
  [
    2,
  ],
  [
    3,
  ],
  "end",
  [],
]
`;

exports[`AsyncParallelHook > async multi 1`] = `
[
  [
    "hooks",
    0,
    1,
  ],
  [
    "hooks",
    0,
    2,
  ],
  [
    "hooks",
    0,
    3,
  ],
  "end",
  [],
]
`;

exports[`AsyncParallelHook > async multi 2`] = `
[
  [
    "hooks",
    0,
    1,
  ],
  [
    "hooks",
    0,
    2,
  ],
  [
    "hooks",
    0,
    3,
  ],
  "end",
  [],
]
`;

exports[`AsyncParallelHook > async multi return error 1`] = `
[
  [
    "hooks",
    0,
    1,
  ],
  [
    "hooks",
    0,
    2,
  ],
  "end",
  [
    [Error: error-2],
  ],
]
`;

exports[`AsyncParallelHook > async multi return error 2`] = `
[
  [
    "hooks",
    0,
    1,
  ],
  [
    "hooks",
    0,
    2,
  ],
  "end",
  [
    [Error: error-2],
  ],
]
`;

exports[`AsyncParallelHook > async multi return value 1`] = `
[
  [
    "hooks",
    0,
    1,
  ],
  [
    "hooks",
    0,
    2,
  ],
  [
    "hooks",
    0,
    3,
  ],
  "end",
  [],
]
`;

exports[`AsyncParallelHook > async multi return value 2`] = `
[
  [
    "hooks",
    0,
    1,
  ],
  [
    "hooks",
    0,
    2,
  ],
  [
    "hooks",
    0,
    3,
  ],
  "end",
  [],
]
`;

exports[`AsyncParallelHook > async single 1`] = `
[
  [
    "hooks",
    1,
  ],
  [
    "hooks",
    2,
  ],
  [
    "hooks",
    3,
  ],
  "end",
  [],
]
`;

exports[`AsyncParallelHook > async single 2`] = `
[
  [
    "hooks",
    1,
  ],
  [
    "hooks",
    2,
  ],
  [
    "hooks",
    3,
  ],
  "end",
  [],
]
`;

exports[`AsyncParallelHook > async single return error 1`] = `
[
  [
    "hooks",
    1,
  ],
  [
    "hooks",
    2,
  ],
  "end",
  [
    [Error: error-2],
  ],
]
`;

exports[`AsyncParallelHook > async single return error 2`] = `
[
  [
    "hooks",
    1,
  ],
  [
    "hooks",
    2,
  ],
  "end",
  [
    [Error: error-2],
  ],
]
`;

exports[`AsyncParallelHook > async single return value 1`] = `
[
  [
    "hooks",
    1,
  ],
  [
    "hooks",
    2,
  ],
  [
    "hooks",
    3,
  ],
  "end",
  [],
]
`;

exports[`AsyncParallelHook > async single return value 2`] = `
[
  [
    "hooks",
    1,
  ],
  [
    "hooks",
    2,
  ],
  [
    "hooks",
    3,
  ],
  "end",
  [],
]
`;

exports[`AsyncParallelHook > promise reject multi return value 1`] = `
[
  [
    "hooks",
    0,
    1,
  ],
  [
    "hooks",
    0,
    2,
  ],
  [
    "error",
  ],
  [
    4,
  ],
]
`;

exports[`AsyncParallelHook > promise reject multi return value 2`] = `
[
  [
    "hooks",
    0,
    1,
  ],
  [
    "hooks",
    0,
    2,
  ],
  [
    "error",
  ],
  [
    4,
  ],
]
`;

exports[`AsyncParallelHook > promise reject single return value 1`] = `
[
  [
    "hooks",
    1,
  ],
  [
    "hooks",
    2,
  ],
  [
    "error",
  ],
  [
    4,
  ],
]
`;

exports[`AsyncParallelHook > promise reject single return value 2`] = `
[
  [
    "hooks",
    1,
  ],
  [
    "hooks",
    2,
  ],
  [
    "error",
  ],
  [
    4,
  ],
]
`;

exports[`AsyncParallelHook > promise resolve multi 1`] = `
[
  [
    "hooks",
    0,
    1,
  ],
  [
    "hooks",
    0,
    2,
  ],
  [
    "hooks",
    0,
    3,
  ],
  [
    "end",
  ],
  [
    [
      undefined,
      undefined,
      undefined,
    ],
  ],
]
`;

exports[`AsyncParallelHook > promise resolve multi 2`] = `
[
  [
    "hooks",
    0,
    1,
  ],
  [
    "hooks",
    0,
    2,
  ],
  [
    "hooks",
    0,
    3,
  ],
  [
    "end",
  ],
  [
    [
      undefined,
      undefined,
      undefined,
    ],
  ],
]
`;

exports[`AsyncParallelHook > promise resolve multi return value 1`] = `
[
  [
    "hooks",
    0,
    1,
  ],
  [
    "hooks",
    0,
    2,
  ],
  [
    "hooks",
    0,
    3,
  ],
  [
    "end",
  ],
  [
    [
      undefined,
      4,
      undefined,
    ],
  ],
]
`;

exports[`AsyncParallelHook > promise resolve multi return value 2`] = `
[
  [
    "hooks",
    0,
    1,
  ],
  [
    "hooks",
    0,
    2,
  ],
  [
    "hooks",
    0,
    3,
  ],
  [
    "end",
  ],
  [
    [
      undefined,
      4,
      undefined,
    ],
  ],
]
`;

exports[`AsyncParallelHook > promise resolve single 1`] = `
[
  [
    "hooks",
    1,
  ],
  [
    "hooks",
    2,
  ],
  [
    "hooks",
    3,
  ],
  [
    "end",
  ],
  [
    [
      undefined,
      undefined,
      undefined,
    ],
  ],
]
`;

exports[`AsyncParallelHook > promise resolve single 2`] = `
[
  [
    "hooks",
    1,
  ],
  [
    "hooks",
    2,
  ],
  [
    "hooks",
    3,
  ],
  [
    "end",
  ],
  [
    [
      undefined,
      undefined,
      undefined,
    ],
  ],
]
`;

exports[`AsyncParallelHook > promise resolve single return value 1`] = `
[
  [
    "hooks",
    1,
  ],
  [
    "hooks",
    2,
  ],
  [
    "hooks",
    3,
  ],
  [
    "end",
  ],
  [
    [
      undefined,
      4,
      undefined,
    ],
  ],
]
`;

exports[`AsyncParallelHook > promise resolve single return value 2`] = `
[
  [
    "hooks",
    1,
  ],
  [
    "hooks",
    2,
  ],
  [
    "hooks",
    3,
  ],
  [
    "end",
  ],
  [
    [
      undefined,
      4,
      undefined,
    ],
  ],
]
`;
